added token register